@@ -43,9 +43,6 @@ import db
 import mgi_utils
 import loadlib
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 #globals
 
 datadir = os.environ['DATADIR']
