@@ -36,9 +36,6 @@ import db
 import mgi_utils
 import loadlib
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 #globals
 
 taxId = os.environ['TAXID']
